cluster-home/operations/gtd/linkace/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkace
  namespace: gtd
  labels:
    app.kubernetes.io/name: linkace
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: linkace
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linkace
    spec:
      volumes:
        - name: la-cache
          emptyDir: {}
        - name: env-file
          emptyDir: {}
      containers:
        - image: ghcr.io/kovah/linkace:v2.6.2@sha256:6d0bf3d8bef4af586b5b422be732a2d78c76618a01b5e90934c9ea7c94acd476
          name: linkace
          ports:
            - containerPort: 80
          volumeMounts:
            - name: la-cache
              mountPath: /app/bootstrap/cache
            - name: env-file
              mountPath: /app/.env
              subPath: .env
      restartPolicy: Always
