cluster-home/operations/gtd/linkace/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkace
  namespace: gtd
  labels:
    app.kubernetes.io/name: linkace
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: linkace
