cluster-home/operations/gtd/linkace/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkace
  namespace: gtd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    authentik.home.arpa/enabled: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bookmarks.buvis.net
      secretName: linkace-crt
  rules:
    - host: bookmarks.buvis.net
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: linkace
                port:
                  number: 80
